<resources>
    <string name="app_name">smartInPhone Project Android</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="akun">Akun</string>
    <string name="list_hp">List HP</string>
    <string name="belum_melakukan_login">Belum Melakukan Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">User</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="update_delete_hp"><![CDATA[Update & Delete HP]]></string>
    <string name="change_profil">Change Profil</string>
    <string name="change_password">Change Password</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="update_hp">Update HP</string>
    <string name="smartinphone">smartInPhone</string>
    <string name="logout">Logout</string>
    <string name="add_hp">Add HP</string>
    <string name="edit_profile">Edit Profile</string>
</resources>