<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/color1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/unknown"
            app:riv_oval="true"
            app:riv_border_color="@color/white"
            app:riv_border_width="3dp"/>

        <View
            android:id="@+id/viewSupporter"
            android:layout_width="1dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/roleTV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>